--- a/web/templates/chart.html
+++ b/web/templates/chart.html
@@ -1,17 +1,6 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>CandleStick Example</title>
-<!--[if lte IE 8]><script language="javascript" type="text/javascript" src="http://www.flotcharts.org/excanvas.min.js""></script><![endif]-->
-<script language="javascript" type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-<script language="javascript" text="text/javascript" src="http://www.flotcharts.org/flot/jquery.flot.js"></script>
-<script language="javascript" text="text/javascript" src="http://www.flotcharts.org/flot/jquery.flot.time.js"></script>
-<script language="javascript" text="text/javascript" src="static/js/flot/flot.candle.js"></script>
-<script language="javascript" text="text/javascript" src="static/js/flot_plot.js"></script>
-</head>
-<body>
-<div id="placeholder" style="width:600px;height:300px;"></div>
+{#<script src="http://code.highcharts.com/highcharts.js"></script>#}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 
-</body>
-</html>
+{#<script src="https://code.highcharts.com/stock/modules/exporting.js"></script>#}
+
+<div id="container" style="height: 400px; min-width: 310px"></div>
