--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -17,7 +17,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="static/js/account_info.js"></script>
     <script src="static/js/portfolio_info.js"></script>
-    <script src="static/js/chart.js"></script>
+    <script src="static/js/highstock.js"></script>
+    <script src="static/js/live_chart.js"></script>
 </head>
 
 <body>
@@ -68,6 +69,23 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1>Chart</h1>
+
+                        <form role="form">
+                          <div class="form-group">
+                            <label for="email">Ticker:</label>
+                            <input type="email" class="form-control" id="ticker">
+                          </div>
+{#                          <div class="form-group">#}
+{#                            <label for="pwd">Password:</label>#}
+{#                            <input type="password" class="form-control" id="pwd">#}
+{#                          </div>#}
+{#                          <div class="checkbox">#}
+{#                            <label><input type="checkbox"> Remember me</label>#}
+{#                          </div>#}
+                          <button type="submit" class="btn btn-default">Submit</button>
+                        </form>
+
+                        <div id="chart"></div>
                     </div>
                 </div>
 
