--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -49,7 +49,7 @@
                         Available Funds:    <div id="available-funds-container" style="display:inline"></div><br>
                         Buying Power:       <div id="buying-power-container" style="display:inline"></div><br>
                         Excess Liquidity:   <div id="excess-liquidity-container" style="display:inline"></div><br>
-                        Futures PnL:        <div id="futures-pnl-container" style="display:inline"></div><br>
+                        Futures PnL:        <td id="futures_pnl"><div id="futures-pnl-container" style="display:inline"></div></td><br>
                         Unrealized PnL:     <div id="unrealized-pnl-container" style="display:inline"></div><br>
                         Realized PnL:       <div id="realized-pnl-container" style="display:inline"></div><br>
 
