--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -27,7 +27,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="#">
-                        Trading
+                        DingDong
                     </a>
                 </li>
                 <li>
